...
                self.selectButton.setTitle("Select Insights", for: .normal)
            }
        case .age:
            self.categoryLabel.text = "Age"
            self.selectButton.setTitle(data, for: .normal)
        case .sex:
            self.categoryLabel.text = "Sex"
            self.selectButton.setTitle(data, for: .normal)
        case .height:
            self.categoryLabel.text = "Height"
            self.selectButton.setTitle(data, for: .normal)
        case .calorieIntake:
            self.categoryLabel.text = "Average Daily Calorie Intake"
...
            self.categoryLabel.text = "Average Wake Time"
            self.selectButton.setTitle(data, for: .normal)
        case .dateOfExam:
            self.categoryLabel.text = "Date Of Exam"
            self.selectButton.setTitle(data, for: .normal)
        case .bloodPressureWithSystolic:
            self.categoryLabel.text = "Blood Pressure(systolic, mmHg)"
            self.selectButton.setTitle(data, for: .normal)
        case .bloodPressureWithDiastolic:
            self.categoryLabel.text = "Blood Pressure(diastolic, mmHg)"
            self.selectButton.setTitle(data, for: .normal)
        case .glucose:
            self.categoryLabel.text = "Glucose(mg/dL)"
...
