...
    var weight: String?
    
    var selectIndex: Int = 0

    override func viewDidLoad() {
        super.viewDidLoad()
        self.navigationItem.title = "Health Access"
        self.navigationItem.leftBarButtonItem = UIBarButtonItem(title: "Cancel", style: UIBarButtonItemStyle.plain , target: self, action: #selector(cancel))
        self.navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Done", style: UIBarButtonItemStyle.done , target: self, action: #selector(done))
        tableView.estimatedRowHeight = 44
        registerTableViewCells()
        getDataSource()
    }

    override func didReceiveMemoryWarning() {
...
