...
                                                                    <color key="backgroundColor" red="0.98039215690000003" green="0.47843137250000001" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
                                                                    <constraints>
                                                                        <constraint firstAttribute="width" constant="30" id="B6I-9e-fCb"/>
                                                                        <constraint firstAttribute="height" constant="30" id="dTW-tB-87j"/>
                                                                    </constraints>
                                                                </imageView>
                                                                <textField opaque="NO" clipsSubviews="YES" tag="11" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="yuh-22-qhD">
                                                                    <rect key="frame" x="46" y="10" width="241" height="30"/>
                                                                    <constraints>
                                                                        <constraint firstAttribute="height" constant="30" id="hFL-go-yBn"/>
                                                                    </constraints>
                                                                    <nil key="textColor"/>
                                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
...
                                                            <rect key="frame" x="20" y="7" width="295" height="45"/>
                                                            <color key="backgroundColor" red="0.92941176469999998" green="0.27058823529999998" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="45" id="KFh-69-MSY"/>
                                                            </constraints>
                                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                                            <state key="normal" title="Create an account">
                                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                            </state>
                                                            <connections>
                                                                <action selector="tapOnCreateAccountButton:" destination="6qs-fC-cwa" eventType="touchUpInside" id="luN-xV-gnV"/>
                                                            </connections>
                                                        </button>
...
